Order detail and Order list use separate resources. Added customer profile EP.
