# storage/api/api.yaml
@@ -92,7 +92,7 @@ paths:
                     type: array
                     items:
                       type: object
-                      required: [ id, name, date, totalPrice, status, selectedServices ]
+                      required: [ id, name, date, totalPrice, status ]
                       properties:
                         id:
                           type: integer
@@ -107,19 +107,6 @@ paths:
                         status:
 #                            enum
                           type: string
-                        selectedServices:
-                          type: array
-                          items:
-                            type: object
-                            required: [ id, name, price ]
-                            properties:
-                              id:
-                                type: integer
-                              name:
-                                type: string
-                              price:
-                                type: number
-                                format: float
                         paymentType:
                           type: string
                         location:
@@ -185,6 +172,8 @@ paths:
   /api/v1/orders/{orderId}:
     get:
       summary: Get order detail
+      parameters:
+        - $ref: '#/components/parameters/OrderId'
       tags:
         - private
       security:
@@ -306,9 +295,7 @@ paths:
     get:
       summary: Get list of customers
       tags:
-        - private
-      security:
-        - bearerAuth: [ ]
+        - public
       responses:
         200:
           description: OK
@@ -345,6 +332,49 @@ paths:
                           type: string
                           format: uri
                           nullable: true
+        401:
+          description: Unauthorised access
+
+  /api/v1/customers/{customerId}/profile:
+    get:
+      summary: Get customer profile
+      parameters:
+        - $ref: '#/components/parameters/CustomerId'
+      tags:
+        - private
+      security:
+        - bearerAuth: [ ]
+      responses:
+        200:
+          description: OK
+          #            todo validacia response
+          content:
+            application/json:
+              schema:
+                type: object
+                required: [ name, surname, birthdate, email, state ]
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  surname:
+                    type: string
+                  birthdate:
+                    type: string
+                    format: date
+                  email:
+                    type: string
+                    format: email
+                  phone:
+                    type: string
+                    nullable: true
+                  state:
+                    type: string
+                  photo:
+                    type: string
+                    format: uri
+                    nullable: true
         401:
           description: Unauthorised access
 
@@ -385,6 +415,8 @@ paths:
   /api/v1/providers/{providerId}:
     get:
       summary: Get provider detail
+      parameters:
+        - $ref: '#/components/parameters/ProviderId'
       tags:
         - public
       responses:
@@ -410,6 +442,8 @@ paths:
   /api/v1/providers/{providerId}/comments:
     get:
       summary: Get list of comments by provider ID
+      parameters:
+        - $ref: '#/components/parameters/ProviderId'
       tags:
         - public
       responses:
@@ -444,6 +478,8 @@ paths:
   /api/v1/providers/{providerId}/services:
     get:
       summary: List of services by provider ID
+      parameters:
+        - $ref: '#/components/parameters/ProviderId'
       tags:
         - public
       responses:
@@ -503,6 +539,35 @@ components:
           nullable: true
           additionalProperties: true
       additionalProperties: true
+
+  parameters:
+    CustomerId:
+      name: customerId
+      in: path
+      description: customer id
+      required: true
+      schema:
+        type: string
+        format: integer
+        example: 1
+    ProviderId:
+      name: providerId
+      in: path
+      description: provider id
+      required: true
+      schema:
+        type: string
+        format: integer
+        example: 1
+    OrderId:
+      name: orderId
+      in: path
+      description: order id
+      required: true
+      schema:
+        type: string
+        format: integer
+        example: 1
 
   responses:
     UnexpectedErrorResponse:
